--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 class="text-3xl text-center font-bold underline">
             Hello Logic Hunters!
         </h1>
+        <h1>Hello from Joydeep</h1>
     </div>
 </body>
 
