--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1 class="text-3xl text-center font-bold underline">
             Hello Logic Hunters!
         </h1>
+
+        <p>Hello from Fahad</p>
     </div>
 </body>
 
