--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             Hello Logic Hunters!
         </h1>
         <h1>Hello from Joydeep</h1>
+        <h1>Hello from Joy 2</h1>
     </div>
 </body>
 
