--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <p>Hello from Fahad</p>
         <p>Hello from Ashik</p>
-        <p>Hello Al amin bro</p>
+        <p>Hello form Ubaid</p>
     </div>
 </body>
 
