--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </h1>
 
         <p>Hello from Fahad</p>
+        <p>Welcome to the Logic Hunters test project.</p>
+        <h1 class="text-2xl text-center font-bold underline">
+            I am Sadeed</h1>
     </div>
 </body>
 
